Initialized for actor
